Add controle structuren

--- a/loops/index.html
+++ b/loops/index.html
@@ -7,15 +7,8 @@
     <title>Document</title>
 </head>
 <body>
+
+    <script src="js/main.js"></script>
     
-
-    <!-- Dit is voor de if-->
-    <!-- 
-    <script src="js/main.js"></script> -->
-
-    <script src="js/switchcase.js"></script>
-
-    
-
 </body>
 </html>
