--- a/dom/index.html
+++ b/dom/index.html
@@ -4,20 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Form for your address stuff etc.</title>
+
+    <script src="js/functions.js"></script>
 </head>
-<body>
+<body onload="init();">
 
     <form name="data">
-        Address: <input name="address" value="Abbey Road 42">
-        Phone: <input name="phone" type="number" id="phoneNumber" value="777888999">
+        Address: <input name="address" value="Abbey Road 42" onchange="showAddress(this);">
+        Phone: <input name="phone" type="number" id="phoneNumber" value="777888999" onchange="showAddress(this);">
     </form>
 
-    <script>
-        window.alert(window.document.data.address.value); // DOM uitlezen
-        window.alert(document.forms[0].address.value);
-        window.alert(document.getElementById("phoneNumber").value);
-    </script>
+    
+    <div id="advertentie" onmouseover="advertentie();" onmouseout="jammerDan();">
+        Hier zou uw advertentie  kunnen staan!
+    </div>
     
 </body>
 </html>
