--- a/validatie/index.html
+++ b/validatie/index.html
@@ -13,6 +13,7 @@
 
         Addres: <input type="text" name="address" />
         Postcode: <input type="text" name="postcode" />
+        Password: <input type="password" name="password" />
 
         <input type="submit" name="Verstuur" />
     
